--- a/index.html
+++ b/index.html
@@ -7,15 +7,8 @@
     <link rel="stylesheet" href="stylesheet-min_device_width_700px.css">
     <link rel="stylesheet" href="stylesheet-universal_styling.css">
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
-
-    <!--jquery cdn-->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <!--importing animate on scroll (AOS) library--
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">-->
-
-    <script src="https://unpkg.com/scrollreveal"></script>
-
+    <!-- jQuery (jQuery CDN) -->
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 
     <title>ACCRA VIBES</title> 
 </head>
@@ -77,15 +70,11 @@
         <!--intro section-->
         <div class="intro" id="intro-page">
             <div class="intro-feature">
-                <h2 data-aos="fade-left" data-aos-duration="700">INTRO</h2>
+                <h2>INTRO</h2>
                 <h1 class="number">1</h1>
-                <div class="cta">
-                    <p>Scroll</p>
-                    <i class="fi fi-rr-arrow-right"></i>
-                </div>
             </div>
             <div class="intro-text">
-                <p data-aos="zoom-in" data-aos-duration="700">
+                <p class="intro-alt-1">
                     Accra, the dynamic capital of Ghana, seamlessly blends history, culture, and modern urban life. 
                     Nestled along the Atlantic coast, it serves as the country’s political, economic, and cultural hub. 
                     Alive with energy, accra boasts bustling markets such as Makola, artistic enclaves, and high-end 
@@ -94,6 +83,14 @@
                     historic Osu Castle, each telling the story of Ghana’s journey to independence. Beyond its past, the city thrives on 
                     creativity and innovation, with a flourishing art, fashion, and music scene that continues to gain global recognition.
                     <br>
+                    <br>
+                    Whether you’re indulging in the vibrant nightlife of Osu, enjoying the coastal breeze at Labadi Beach, or savoring the 
+                    flavors of authentic Ghanaian cuisine, Accra offers something for everyone. A city of contrasts—where tradition meets progress 
+                    and the old coexists with the new—Accra is more than just a destination; it’s an experience.
+                </p>
+                <p class="intro-alt-2">
+                    Beyond its past, the city thrives on 
+                    creativity and innovation, with a flourishing art, fashion, and music scene that continues to gain global recognition.
                     <br>
                     Whether you’re indulging in the vibrant nightlife of Osu, enjoying the coastal breeze at Labadi Beach, or savoring the 
                     flavors of authentic Ghanaian cuisine, Accra offers something for everyone. A city of contrasts—where tradition meets progress 
@@ -117,7 +114,7 @@
         <div class="history">
             <div class="history-main">
                 <div class="paragraphs">
-                    <p data-aos="zoom-in" data-aos-duration="700">
+                    <p>
                         <span style="font-weight: bold;">The Indigenuos Roots of Accra</span>
                         <br>
                         Before the arrival of Europeans, Accra was a collection of settlements primarily inhabited by the Ga people, 
@@ -137,13 +134,12 @@
                         and customs were exchanged, further enriching Accra's cultural identity.
                         
                     </p>
-                    <p data-aos="zoom-in" data-aos-duration="700">
+                    <p>
                         <span style="font-weight: bold;">Arrival of the Europeans</span>
                         <br>
                         In the 15th century, the Portuguese were the first Europeans to arrive on the Gold Coast (modern-day Ghana). They established 
                         trade relations, initially focusing on gold but later engaging in the transatlantic slave trade. By the 17th century, the Dutch, 
                         Danish, and British had also established trading posts along the coast.
-                        <br>
                         <br>
                         Each European power built a fortress in Accra to protect its commercial interests:
                         <br>
@@ -152,7 +148,6 @@
                         <span style="font-weight: bold;">Ussher Fort –</span> Built by the Dutch in 1649.
                         <br>
                         <span style="font-weight: bold;">James Fort –</span> Built by the British in 1673.
-                        <br>
                         <br>
                         These forts became central to the Atlantic slave trade, where thousands of Africans were captured and shipped to the Americas. Accra's 
                         role in the trade expanded as it became a major hub for European merchants and African middlemen.
@@ -167,23 +162,21 @@
                         During British rule, Accra began to develop as a modern city with roads, railways, and administrative buildings. However, colonial rule also 
                         brought resistance, as many indigenous people opposed British policies, forced labor, and land dispossession.
                     </p>
-                    <p data-aos="zoom-in" data-aos-duration="700">
+                    <p>
                         <span style="font-weight: bold;"> The Rise of Accra as the Political Capital</span>
+                        <br>
                         Accra’s political history has been shaped by Ghana’s journey to independence and its subsequent evolution into one of Africa’s leading democratic 
                         nations. Before British colonial rule, the city was already an important center for the local Ga chiefs and traditional leadership. However, the 
                         arrival of the British and the establishment of Accra as the colonial capital marked the beginning of its political prominence.
-                        <br>
                         <br>
                         In 1957, Ghana became the first African country to gain independence from colonial rule, and Accra was the center of this historic achievement. 
                         The newly elected leader, Kwame Nkrumah, made Accra the capital of the newly-formed Republic of Ghana, and it quickly became a symbol of Pan-Africanism. 
                         Nkrumah’s vision of industrializing the nation and promoting unity among African nations was reflected in the development of the city, which saw the 
                         construction of important political institutions, including the Kwame Nkrumah Memorial Park.
                         <br>
-                        <br>
                         After Nkrumah’s overthrow in 1966, Accra went through periods of military rule, political unrest, and economic instability. However, the return to democratic 
                         governance in the early 1990s, with the adoption of a new constitution, led to the establishment of Ghana as a stable democracy. Today, Accra remains the 
                         political center of Ghana, housing the Parliament, the Presidency, and other key government institutions.
-                        <br>
                         <br>
                         The political landscape of Accra is dynamic, as the city has also become a focal point for political activism, particularly in recent years, as citizens 
                         increasingly demand better governance, transparency, and accountability. Accra’s role as the nation’s political heart continues to grow, cementing its status as 
@@ -195,12 +188,12 @@
                 <h2>HARDWORK & RESILIENCE</h2>
             </div>
             <div class="history-image-feature">
-                <img data-aos="zoom-in" data-aos-duration="700" src="images/claude-nai-unsplash.jpg" alt="">
-                <img data-aos="zoom-in" data-aos-duration="700" src="images/ifeoluwa-a--CgUhaShACE-unsplash.jpg" alt="">
-                <img data-aos="zoom-in" data-aos-duration="700" src="images/jozuo-douglas-pixabay.jpg" alt="">
+                <img src="images/claude-nai-unsplash.jpg" alt="">
+                <img src="images/ifeoluwa-a--CgUhaShACE-unsplash.jpg" alt="">
+                <img src="images/jozuo-douglas-pixabay.jpg" alt="">
             </div>
             <div class="history-conclusion">
-                <p data-aos="zoom-in" data-aos-duration="700">
+                <p>
                     <span style="font-weight: bold;">The Transformation of Accra’s Economy</span>
                     <br>
                     The industrial history of Accra is closely tied to the development of Ghana’s infrastructure and the rise of key industries throughout the 20th century. After Ghana 
@@ -215,11 +208,8 @@
                     at boosting the national economy. Industries such as textiles, food processing, and manufacturing were set up to reduce Ghana’s reliance on imports. However, economic challenges, 
                     including periods of political instability and military rule, led to fluctuations in industrial growth.
                     <br>
-                    <br>
                     Over time, the service sector, particularly finance, trade, and telecommunications, became central to Accra’s economy. The Makola Market remained an important trade hub, while the 
                     construction of new commercial centers like the Accra Mall further solidified the city as an economic powerhouse in the region.
-                    <br>
-                    <br>
                     <br>
                     Accra’s history is a testament to the city’s resilience, adaptability, and cultural richness. From its early days as a thriving coastal settlement to its transformation 
                     into the modern, bustling capital of Ghana, Accra has undergone significant changes. Its cultural, colonial, industrial, and political histories are intricately intertwined, 
@@ -231,23 +221,19 @@
         <!--intro section-->
         <div class="explore-intro">
             <div class="intro-feature">
-                <h2 data-aos="fade-up" data-aos-duration="700">EXPLORE</h2>
-                <h1 class="number" data-aos="zoom-in" data-aos-duration="700">2</h1>
-                <div class="cta" data-aos="fade-up" data-aos-duration="700">
-                    <p>Scroll</p>
-                    <i class="fi fi-rr-arrow-right"></i>
-                </div>
+                <h2>EXPLORE</h2>
+                <h1 class="number">2</h1>
             </div>
             <div class="blurb">
                 <p><em>Photo credit: Sandbox Beach Club / X</em></p>
             </div>
         </div>
         <div class="explore-section">
-            <img data-aos="zoom-in" data-aos-duration="700" class="explore-section-image" src="images/pbc-food-drinks-48_via_polo_beach_club.jpg" alt="">
+            <img class="explore-section-image" src="images/pbc-food-drinks-48_via_polo_beach_club.jpg" alt="">
             <div class="explore-section-description">
                 <!--<i class="fi fi-rr-arrow-up-right-from-square"></i>-->
-                <img data-aos="zoom-in" data-aos-duration="700" src="images/tidal_rave_via_x.jpg" alt="">
-                <p data-aos="zoom-in" data-aos-duration="700">
+                <img src="images/tidal_rave_via_x.jpg" alt="">
+                <p>
                     Get ready to dive into a world of cultural landmarks, hidden gems, and mouth-watering culinary delights. Whether you're an art lover, a foodie, a history enthusiast, or simply 
                     someone seeking adventure, Accra has something for you. We’ll guide you to the city's most iconic sites, introduce you to lesser-known treasures, and help you plan your next 
                     unforgettable experience.
@@ -263,18 +249,14 @@
         <!--About section-->
         <div class="about-intro">
             <div class="intro-feature">
-                <h2 data-aos="fade-up" data-aos-duration="700">ABOUT</h2>
-                <h1 class="number" data-aos="zoom-in" data-aos-duration="700">3</h1>
-                <div class="cta" data-aos="fade-up" data-aos-duration="700">
-                    <p>Scroll</p>
-                    <i class="fi fi-rr-arrow-right"></i>
-                </div>
+                <h2>ABOUT</h2>
+                <h1 class="number">3</h1>
             </div>
         </div>
         <div class="about-section" id="about-page">
             <div class="about-info">
                 <div class="about-paragraph">
-                    <p data-aos="zoom-in" data-aos-duration="700">
+                    <p>
                         Welcome to Accra Vibes, your go-to guide for experiencing the heartbeat of Ghana’s vibrant capital. Whether you’re a local, an expat, or a traveler eager to explore, we 
                         bring you the best of Accra—from its bustling streets and rich culture to its thriving food scene and dynamic nightlife.
                         At Accra Vibes, we go beyond the surface, uncovering hidden gems, sharing insider tips, and celebrating the people and places that make Accra unique. From historic 
@@ -283,16 +265,15 @@
                         <br>
                         Join us as we explore, discover, and celebrate everything that makes Accra one of the most exciting cities in Africa.
                         <br>
-                        <br>
                         This is Accra. This is the vibe.
                     </p>
-                    <img data-aos="zoom-in" data-aos-duration="700" src="images/sandbox_003-ref(coupons_ghana).jpg" alt="">
+                    <img src="images/sandbox_003-ref(coupons_ghana).jpg" alt="">
                 </div>
                 <div class="contributors">
-                    <h2 data-aos="fade-up" data-aos-duration="700">CONTRIBUTORS</h2>
+                    <h2>CONTRIBUTORS</h2>
                     <div class="contributor">
-                        <img data-aos="zoom-in" data-aos-duration="700" src="images/default-avatar-photo-placeholder-profile-icon-vector.jpg" alt="">
-                        <p data-aos="fade-up" data-aos-duration="700">
+                        <img src="images/default-avatar-photo-placeholder-profile-icon-vector.jpg" alt="">
+                        <p>
                             Senyo Agbe
                             <br>
                             Founder
@@ -308,13 +289,5 @@
 
     </div>
 
-    <!--AOS script-->
-    <script>
-        AOS.init();
-    </script>
-
-<script>
-    ScrollReveal().reveal('.intro-feature');
- </script>
 </body>
 </html>
